2005-01-31  Marcus Brinkmann  <marcus@gnu.org>

	* README: Revert last change for now.
	
	* README: Add patch for L4 local and remote xfer timeouts support.

2005-01-23  Marcus Brinkmann  <marcus@gnu.org>

	* configure.ac: Fall back to libc.a on GNU/Hurd.
	New option --with-libc.
	(WITH_LIBC): New automake conditional.
	* Makefile.am (LIBC_SUBDIRS): New variable.
	(SUBDIRS): Add $(LIBC_SUBDIRS).
	* libc: New directory.

2005-01-22  Marcus Brinkmann  <marcus@gnu.org>

	* configure.ac: Support ripping parts from libcrt.a on GNU/Hurd.

	* README: Add patch for L4 TLS support.

	* configure.ac (AC_CONFIG_FILES): Add ruth/Makefile.
	* Makefile.am (SUBDIRS): Add ruth.

2005-01-11  Neal H. Walfield  <neal@gnu.org>

	* libhurd-mm: New directory.
	* Makefile.am (SUBDIRS): Add libhurd-mm.
	* configure.ac: Add include for libhurd-mm/headers.m4.
	 (AC_CONFIG_FILES): Add libhurd-mm/Makefile.

2004-12-25  Neal H. Walfield  <neal@gnu.org>

	* libhurd-btree: New directory.
	* Makefile.am (SUBDIRS): Add libhurd-btree.
	* configure.ac (AC_CONFIG_FILES): Add libhurd-btree/Makefile.
	Add include for libhurd-btree/headers.m4.

2004-11-01  Marcus Brinkmann  <marcus@gnu.org>

	* configure.ac (CFLAGS): Set after AC_PROG_CC.

2004-10-29  Marcus Brinkmann  <marcus@gnu.org>

	* platform: New directory.
	* configure.ac (AC_CONFIG_FILES): Add platform/alpha/Makefile,
	platform/amd64/Makefile, platform/ia32/Makefile,
	platform/ia64/Makefile, platform/powerpc/Makefile,
	platform/powerpc64/Makefile and platform/Makefile.
	* Makefile.am (SUBDIRS): Add platform.

2004-10-28  Marcus Brinkmann  <marcus@gnu.org>

	* deva: New directory.
	* configure.ac (AC_CONFIG_FILES): Add deva/Makefile.
	* Makefile.am (SUBDIRS): Add deva.

2004-04-26  Marcus Brinkmann  <marcus@gnu.org>

	* configure.ac: Add include for wortel/headers.m4.

2004-04-15  Marcus Brinkmann  <marcus@gnu.org>

	* task: New directory.
	* configure.ac (AC_CONFIG_FILES): Add task/Makefile.
	* Makefile.am (SUBDIRS): Add task.
