@@ -1,3 +1,7 @@
+2005-02-09  Marcus Brinkmann  <marcus@gnu.org>
+
+	* configure.ac (AC_CONFIG_FILES): Add libl4/tests/Makefile.
+
 2005-01-31  Marcus Brinkmann  <marcus@gnu.org>
 
 	* README: Revert last change for now.
